# vibrant-wasm

./: .gitignore  Cargo.toml  Readme.md
.run/: publish (dev).run.xml  publish (release).run.xml
src/: js.rs  lib.rs  palette.rs  vibrant.rs
