[package]
name = "vibrant-wasm"
version = "0.4.10"
authors = ["Markus Mohoritsch <markus.mohoritsch@gmx.at>"]
repository = "https://github.com/motabass/vibrant-wasm.git"
homepage = "https://github.com/motabass/vibrant-wasm"
license = "MIT"
readme = "README.md"
documentation = "http://killercup.github.io/vibrant-rs/"
description = "Extract vibrant colors from an image file with WebAssembly. Can be used as a library, but also contains a simple executable."
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
debug = 0
lto = true

[features]
dev = ["clippy", "console_error_panic_hook"]

[dependencies]
image = "0.24.5"
color_quant = "1.1.0"
itertools = "0.10.5"
clippy = { version = "0.0.302", optional = true }
hsl = "0.1.1"

instant = { version = "0.1.12", features = ["wasm-bindgen"] }

js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["console"] }

wasm-bindgen = "0.2.83"
serde = { version = "1.0.149", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_bytes = "0.11.7"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
